# chinese-grammar-helper

./: .gitignore  README.md  grammar  main.py  pyproject.toml  requirements.txt  simple_example.py  t.env.dist
src/: logging.py  main.py
src/data/: fetch_data.py  load_data.py  prompts.py  scrape_data.py
src/rag/: rag.py
src/vectorstore/: database.py
