[tool.poetry]
name = "chinese-grammar-helper"
version = "0.1.0"
description = ""
authors = ["oksmith <ollie.smith@ravelin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astrapy = "^1.1.0"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
ipykernel = "^6.29.2"
langchain-astradb = "^0.2.0"
langchain-community = "^0.0.37"
langchain-core = "^0.1.52"
langchain-openai = "^0.1.6"
langchain-text-splitters = "^0.0.1"
langchain = "^0.1.17"
langchainhub = "^0.1.15"
openai = "^1.26.0"
pypdf = "^4.2.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
