[tool.poetry]
name = "chinese-grammar-helper"
version = "0.1.0"
description = ""
authors = ["oksmith <ollie.smith@ravelin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
ipykernel = "^6.29.2"
pypdf = "^4.2.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.14"
langchain-text-splitters = "^0.3.4"
langchain-community = "^0.3.14"
langchain-qdrant = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
